Bug 160391 - Font color of the menu bar stays black when changing win10/11 from light to dark mode
Summary: Font color of the menu bar stays black when changing win10/11 from light to d...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.8.0 target:25.2.3 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Main-Menu Windows-Dark-Mode
  Show dependency treegraph
 
Reported: 2024-03-27 10:59 UTC by Sakura286
Modified: 2025-03-20 09:45 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sakura286 2024-03-27 10:59:06 UTC
Description:
When switch Windows application from bright mode to dark mode. The fore-color of the font in the menu bar keeps black.

See:
https://ooo.0x0.ooo/2024/03/27/Oglabj.png

Steps to Reproduce:
1.Set Windows to bright mode.
2.Open LibreOffice
3.Set Windows to dark mode.

Actual Results:
The fore-color of the font in the menu bar keeps black.

Expected Results:
The fore-color of the font in the menu bar should turn into white.


Reproducible: Always


User Profile Reset: No

Additional Info:
By the way, switch from dark to bright won't trigger such kind of bug.
Comment 1 m_a_riosv 2024-03-27 14:41:42 UTC
Please test in safe mode, Menu/Help/Restart in Safe Mode
Comment 2 Sakura286 2024-03-28 02:41:32 UTC
Same bug occurs in safe mode. Test on Win10 22H2 and Win11 22H2.
Comment 3 Sakura286 2024-03-28 02:58:38 UTC
Platform1: Win11 Pro 22H2

Version: 24.2.1.2 (X86_64) / LibreOffice Community
Build ID: db4def46b0453cc22e2d0305797cf981b68ef5ac
CPU threads: 20; OS: Windows 10.0 Build 22621; UI render: default; VCL: win
Locale: zh-CN (zh_CN); UI: en-US
Calc: threaded

Platform2: Win10 Pro 22H2

Version: 24.2.1.2 (X86_64) / LibreOffice Community
Build ID: db4def46b0453cc22e2d0305797cf981b68ef5ac
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: zh-CN (zh_CN); UI: zh-CN
Calc: CL threaded
Comment 4 Stéphane Guillou (stragu) 2024-03-28 05:05:17 UTC
Reproduced on Windows 11:

- Version: 7.6.5.2 (X86_64)
- Version: 24.2.1.2 (X86_64)
- Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 26f7313f724921a9c6086e6c2a93fbe1c48635fa
CPU threads: 4; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US

_Not_ reproduced in:

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 4; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US

-> regression.

No problem when going from dark to light.
No repro on Ubuntu 22.04 + GNOME 42.9.
Comment 5 Kira Tubo 2024-04-04 02:20:43 UTC
Bibisected win64-7.6. Added Caolán McNamara to cc. 

Regression first occurs at: https://git.libreoffice.org/core/+/f7c03364e24da285ea95cea0cc688a7a120fc163%5E%21

----------------

commit f7c03364e24da285ea95cea0cc688a7a120fc163	[log]
author	Caolán McNamara <caolanm@redhat.com>	Mon Feb 06 20:53:55 2023 +0000
committer	Caolán McNamara <caolanm@redhat.com>	Wed Feb 08 16:11:25 2023 +0000
tree b6dc20e02654f5144daea807303dbdd71a72bba0
parent 68ab2e109edf8b81c48e953f7c8d43841e07365a [diff]

-----------------

Reproduced on:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f7c03364e24da285ea95cea0cc688a7a120fc163
CPU threads: 6; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 6 Commit Notification 2025-03-08 22:01:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f668fab0441500da85b76ee042309dcfb67d2253

Resolves: tdf#160391 test if dark/light mode changed at WM_THEMECHANGED

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2025-03-08 22:01:50 UTC
done in trunk, backport to 25-2 in gerrit
Comment 8 Commit Notification 2025-03-09 03:46:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/5ba47684a61d12298fb33cc40df9a4a215db54cd

Resolves: tdf#160391 test if dark/light mode changed at WM_THEMECHANGED

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-03-13 06:34:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/35f41a78a59ec7c7e3e62d953fe145acf720b6b6

Resolves: tdf#160391 test if dark/light mode changed at WM_THEMECHANGED

It will be available in 24.8.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-03-20 09:45:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-2":

https://git.libreoffice.org/core/commit/20949f24e42001960c40b621492aad226d550282

Resolves: tdf#160391 test if dark/light mode changed at WM_THEMECHANGED

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.