Resolves: tdf#160391 test if dark/light mode changed at WM_THEMECHANGED

what docs there are generally mentions WM_SETTINGCHANGE with lParam of
ImmersiveColorSet but this seems to be too early for UseDarkMode() that
uses ShouldAppsUseDarkMode to always return the right thing. While
at WM_THEMECHANGED UseDarkMode() ShouldAppsUseDarkMode seems to be
more robust.

Change-Id: I0d582b441d0beeadc61d41e6518012fccdcce6e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182673
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>